--- a/kuat.css
+++ b/kuat.css
@@ -4,64 +4,101 @@
     box-sizing: border-box;
 }
 body{
+    width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template-rows: 100px 1fr 50px;
+    grid-template-rows: 100px 1fr 100px;
+    grid-template-columns: 1fr;
+    background: linear-gradient(90deg, rgba(14,45,3,1) 0%, rgba(67,208,80,1) 73%, rgba(138,255,128,1) 100%);
+
 }
 header{
     display: grid;
-    place-content: center;
+    grid-template-columns: auto 1fr; 
+    align-items: center;
+    padding: 0 20px;
+    color: #FFFFFF;
 }
-main{
-    background-color: rgb(55, 132, 88);
+
+header {
+    padding-left: 75px;
+    justify-items: start; 
 }
-.galeria{
-    width: 100%;
-    height: 100%;
+
+header span {
+    font-weight: 600;
+}
+
+main {
     display: grid;
-    grid-template-areas: 
-        "f1 f2 f2 f3"
-        "f1 f4 f5 f3"
-        "f1 f6 f8 f8"
-        "f1 f7 f8 f8";
-        grid-template-columns: repeat(8);
-        grid-template-rows: repeat(4);
+    justify-items: center; 
+    align-items: center;
 }
-.foto{
-    background-color: rgb(53, 121, 80);
-    border: 1px solid black;
+
+.background-logo {
+    position: absolute;
+    width: 70%;
+    max-height: 85%;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
 }
-.foto img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    transition: 1s;
+
+.content-text {
+    position: absolute;
+    color: #ffffff;
+    font-size: 2.5rem;
+    width: 280px;
+    transform: translateX(-175%);
+    text-align: end;
 }
-.galeria .foto:nth-of-type(1){
-    grid-area: f1;
+
+.content-image {
+    height: 30vh;
 }
-.galeria .foto:nth-of-type(2){
-    grid-area: f2;
-}
-.galeria .foto:nth-of-type(3){
-    grid-area: f3;
-}
-.galeria .foto:nth-of-type(4){
-    grid-area: f4;
-}
-.galeria .foto:nth-of-type(5){
-    grid-area: f5;
-}
-.galeria .foto:nth-of-type(6){
-    grid-area: f6;
-}
-.galeria .foto:nth-of-type(7){
-    grid-area: f7;
-}
-.galeria .foto:nth-of-type(8){
-    grid-area: f8;
-}
-footer{
+
+footer {
     display: grid;
-    place-content: center;
+    grid-template-columns: 1fr 1fr 1fr; 
+    align-items: center;
+    padding: 0 75px;
+    color: #FFFFFF;
+    font-weight: 100;
+}
+
+footer div {
+    width: 64px;
+}
+
+@media (max-width: 768px) {
+    body {
+        grid-template-rows: 100px auto 100px; 
+    }
+
+    header {
+        padding-left: 25px;
+    }
+
+    .content-text {
+        transform: translateX(0%);
+        top: 80px;
+        font-size: 1rem;
+        width: 100px;
+        text-align: center;
+    }
+
+    .content-image {
+        height: 70vh;
+    }
+
+    footer {
+        padding: 0px 25px;
+
+    }
+} span{
+    display:block;
+    text-align: center;
 }
